--- a/rbac/src/views/main.less
+++ b/rbac/src/views/main.less
@@ -97,7 +97,7 @@
         position: relative;
         z-index: 11;
         .navicon-con{
-            margin: 6px;
+            padding: 10px;
             display: inline-block;
         }
         .header-middle-con{
