--- a/rbac/src/template/index.ejs
+++ b/rbac/src/template/index.ejs
@@ -4,9 +4,9 @@
 <head>
     <title><%= htmlWebpackPlugin.options.title %></title>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width,initial-scale=1.0,maximum-scale=1.0,user-scalable=0">
     <link rel="stylesheet" href="<%= htmlWebpackPlugin.files.css[0] %>">
     <link rel="stylesheet" name="theme" href="">
+    <link rel="shortcut icon" href="./favicon.ico" type="image/x-icon" />
 </head>
 
 <body>
